Wed May 30 16:19:39 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmconfig.(c|glade):
	  Add a PingInterval xdmcp thingie which is a combination of
	  the xdm PingInterval and PingTimeout.

2001-05-30  Havoc Pennington  <hp@redhat.com>

	* configure.in (ALL_LINGUAS): remove ja.po and zh_TW.Big5.po. 
	ja.po contains invalid euc-jp. zh_TW.Big5.po causes gettext 
	to get upset but iconv likes it OK, so I don't know.

Wed May 30 04:00:33 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, daemon/slave.c, gui/gdmlogin.c: Save session in
	  the gdm options file if requested from the chooser.  This is done
	  since it's no longer saved in gsm which is the sane behaviour
	  actually.

Wed May 30 02:13:53 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: run gnome-session with --failsafe in failsafe
	  gnome mode

Tue May 29 15:47:16 2001  George Lebl <jirka@5z.com>

	* config/locale.alias: Add british/american english language choices

	* gui/gdmlanguages.c: Add the POSIX/C locale if it doesn't exist

	* gui/gdmlogin.c: Make the minimize button like an actual minimize
	  button instead of an arrow.  It's a black line in the bottom of the
	  button.  Also turned on the relief again as it looks better like
	  that now I think.

Tue May 29 00:38:18 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c, gui/gdmlogin.c: ignore .rpmorig files as well,
	  and some cosmetic code changes

Mon May 28 02:24:43 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Fixed a stupid mistake cased by a missed warning,
	  not really that crucial since the default config has no failsafe
	  X servers, because AFAIK, no such beast exists yet

	* daemon/gdm.c, daemon/misc.[ch], daemon/slave.c:  In case the
	  language doesn't have '_' as the third character it's a communist
	  and must be executed.  Or perhaps we should just read the alias
	  file and translate it.  This should really only happen if sysadmin