@@ -1,3 +1,9 @@
+Wed May 30 19:17:46 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmphotosetup.c: fix permission setting, and open the source
+	  before dest.  Though a bit pointless since jrb is apprently
+	  rewriting the whole bit :)
+
 Wed May 30 16:19:39 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.[ch], daemon/slave.c, gui/gdmconfig.(c|glade):
